Added IntegrationTest annotation. Modified requests